--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="about-content mt-50">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p>I am currently studying in grade 12 at Rajuk Uttara Model College in Dhaka, Bangladesh. I consider myself a problem solver. In solving everyday problems, I initiate new methodologies and techniques, to best source out the results. <br>I dream of a world where technology will no longer be a privilege rather will be accessible to every single individual breaking all possible barriers. And with our contributions, every single person who has a lobe for science will play his/her role in achieving the world we all dream off.<br> To learn more about me and my work, feel free to get connected. </p>
                         <ul class="clearfix">
                             <li>
                                 <div class="single-info d-flex align-items-center">
